# computational-geometry-cgal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Taller 2 - Dual Graph Bitacora.docx  Taller 3 - Simplificación de Heightmap por Vecindad de Orden k.docx  Taller 3 - Voronoi.docx
lib/pujCGAL/: IO.h  IO.hxx  SegmentsIntersection.h  SegmentsIntersection.hxx
src/cgal/: brute_force.cxx  compare.cxx
src/curvatures/: README.md  curvatures.py  main.py
src/final-project-interpolation/: CMakeLists.txt  README.md  RESULTS.md  RUN_LOCAL.md  dashboard_lineal.html  requirements.txt
src/final-project-interpolation/latex/: informe.tex  secciones_resultados_extra.tex
src/final-project-interpolation/scripts/: audit_env.sh  build_all.sh  build_dashboard.py  build_pdf.sh  build_report.py  evaluate.py  extract_contours.py  generate_dashboard.py  generate_dashboard_ia.py  generate_multi_t.py  inferencia_ia_contours.py  make_report_figs.py  make_synthetic_case.py  render_mesh.py  render_mesh_html.py  run_all_demo.sh  run_batch_ia.py  run_examples.py  run_metrics_demo.sh  run_pipeline.sh  run_real_study.py  run_reconstruct_demo.sh  setup_eigen.sh  stress_test.py  visualize_results.py
src/final-project-interpolation/src/: ContourInterpolator.h  ContourInterpolator.hxx  ContourResampler.h  ContourResampler.hxx  DistanceField.h  DistanceField.hxx  LinearInterpolator.h  LinearInterpolator.hxx  Metrics.h  Metrics.hxx  Reconstructor.h  Reconstructor.hxx  SelfIntersectionResolver.hxx  main.cxx  main_ia.cxx  test_linear.cxx  test_metrics.cxx  test_reconstruct.cxx  test_sdf.cxx  test_series.cxx
src/final-project-interpolation/src/interpolation-lineal/: SelfIntersectionResolver.h  dashboard_lineal.html  main.cxx
src/final-project-interpolation/src/interpolation-lineal/output/: dashboard_lineal.html
src/first-test/: CMakeLists.txt
src/first-test-python/: concavidades.py  requirements.txt
src/first-test/lib/pujCGAL/: DualGraph.hxx  IO_DualGraph.h  IO_DualGraph.hxx  Triangulation.h
src/first-test/src/: concavidades.cxx  concavidades_viz.cxx  concavidades_viz.h  visualizer.cxx
src/no_cgal/: brute_force.cxx
src/polygon_intersection/: brute_force_2.cxx  main.cxx  main_cgal.cxx
src/taller-3-codigo-base/: CMakeLists.txt  README.md  generar_diagramas.py  requirements.txt  visualizer.py
src/taller-3-codigo-base/lib/pujCGAL/: Algoritmos.h  Algoritmos.hxx  IO.h  IO.hxx
src/taller-3-codigo-base/src/: batch_runner.cxx  comparador.cxx  heightmap.cxx
src/taller-3-solucion-leonardo/: CMakeLists.txt  README.md  visualizer.py
src/taller-3-solucion-leonardo/lib/pujCGAL/: Heightmap.h  Heightmap.hxx
src/taller-3-solucion-leonardo/output/batch-resumen/: bitacora.md  resumen.csv
src/taller-3-solucion-leonardo/src/: batch_runner.cxx  build_delaunay_from_heightmap.cxx  decimate_mesh.cxx
src/taller-dual-graph/: CMakeLists.txt  README.md  reporte.html  requirements.txt
src/taller-dual-graph copy/lib/pujCGAL/: Polygon_Functions.hxx  Triangulation.hxx
src/taller-dual-graph copy/src/: dual_graph.cxx
src/taller-dual-graph/lib/pujCGAL/: DualGraph.h  IO.h
src/taller-dual-graph/src/: dual_graph.cxx  visualizer.cxx
